feat: add notifications about habits add db transactions commits changed table names and column types small fixes in basic handlers

--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ psycopg2-binary = "*"
 aiogram = "*"
 pytest = "*"
 pytest-asyncio = "*"
+psycopg = {extras = ["binary"], version = "*"}
 
 [dev-packages]
 pre-commit = "*"
